raffia/tests/error/scss/at-rule/warn/incomplete-expression.snap
---
source: raffia/tests/error.rs
---
error: expect token `)`, but `;` received
  ┌─ incomplete-expression.scss:1:12
  │
1 │ @warn("foo";
  │            ^


